add  solution file

--- a/learnFromFiles/learnFromFiles.csproj
+++ b/learnFromFiles/learnFromFiles.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
+    <PackageReference Include="Pdfpig" Version="0.1.11" />
+  </ItemGroup>
+
 </Project>
